g34e: API SDK Client 兼容
